[tool.poetry]
name = "fastapi-opa"
version = "2.0.3"
description = "Fastapi OPA middleware incl. auth flow."
authors = ["Matthias Osswald <info@busykoala.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/busykoala/fastapi-opa"
keywords = ["fastapi", "oidc", "authentication", "authorization", "saml"]
exclude = ["fastapi_opa/example_oidc.py", "fastapi_opa/example_saml.py"]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
fastapi = ">= 0.109.2"
itsdangerous = "*"
requests = "*"
PyJWT = {extras = ["crypto"], version = ">= 2.4"}
graphene = {version = "^2", optional = true}
python3-saml = {version = "*", optional = true}
python-multipart = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
bandit = "*"
pytest = "*"
pytest-mock = "*"
mock = "*"
freezegun = "*"
Authlib = "*"
pytest-asyncio = "*"
nest-asyncio = "*"
httpx = "*"
ruff = "*"
vale = "^2.20.2"
uvicorn = "*"

[tool.poetry.extras]
graphql = ["graphene"]
saml = ["python3-saml", "python-multipart"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]

[tool.ruff.lint.isort]
force-single-line = true
