[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fastapi-opa"
version = "2.0.4"
description = "FastAPI OPA middleware incl. auth flow."
authors = [{name = "Matthias Osswald", email = "info@busykoala.io"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8,<4.0"
keywords = ["fastapi", "oidc", "authentication", "authorization", "saml"]
dependencies = [
    "fastapi>=0.109.2",
    "itsdangerous",
    "requests",
    "PyJWT[crypto]>=2.4",
]

[project.optional-dependencies]
graphql = ["graphene>=2,<3"]
saml = ["python3-saml", "python-multipart"]

[project.urls]
Repository = "https://github.com/busykoala/fastapi-opa"

[dependency-groups]
dev = [
    "Authlib",
    "bandit",
    "freezegun",
    "httpx",
    "mock",
    "nest-asyncio",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-timeout>=2.3.1",
    "ruff",
    "setuptools>=78.1.1; python_version >= '3.9'",
    "pysentry-rs; python_version >= '3.9'",
    "vale>=2.20.2",
]

[tool.hatch.build]
exclude = ["fastapi_opa/example_oidc.py", "fastapi_opa/example_saml.py"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
